# dem-to-stl

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/dem_to_stl/: __init__.py  api.py  cache.py  converter.py  earth_engine.py  models.py  stl_writer.py  web_app.py
src/dem_to_stl/web_static/: app.js  index.html
