[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dem-to-stl"
version = "0.1.0"
description = "Generate printable STL terrain models from DEM data via Google Earth Engine"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "earthengine-api",
  "fastapi",
  "numpy",
  "xarray",
  "rioxarray",
  "scipy",
  "requests",
  "pyproj",
  "uvicorn",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["dem_to_stl*"]

[tool.setuptools.package-data]
dem_to_stl = ["web_static/*"]

[project.scripts]
dem-to-stl-mckinley = "dem_to_stl.examples:run_mckinley"
dem-to-stl-web = "dem_to_stl.web_app:run_web"

[tool.autopep8]
max_line_length = 88

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_unreachable = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
